# TokenAltar

./: Cargo.toml  README.md  statusquo.md
docs/: wiki.zh-CN.md
frontend/: index.html
frontend/src/: App.vue  style.css
frontend/src/api/: types.ts
frontend/src/utils/: health.ts
migrations/: 0002_runtime_controls.sql  0007_channel_quota_windows.sql  0010_channel_health_events.sql  0012_affinity_presets.sql  0013_one_million_pricing_presets.sql  0014_channel_quota_points.sql
src/: admin.rs  affinity.rs  app.rs  billing.rs  config.rs  db.rs  events.rs  gateway.rs  lib.rs  main.rs  models.rs  pricing.rs  protocol.rs  routing.rs  settings.rs  state.rs  tokenizer.rs
tests/: gateway_integration.rs  social_integration.rs
