[package]
name = "tokenaltar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
bytes = "1.11"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3"
lru = "0.16"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tiktoken-rs = "0.11"
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
